--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
 AllCops:
-  Includes:
+  Include:
     - metadata.rb
     - Gemfile
     - attributes/**
@@ -12,7 +12,6 @@ AllCops:
 Encoding:
   Exclude:
     - metadata.rb
-    - Gemfile
 
 NumericLiterals:
   Enabled: false
