--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,23 +1,6 @@
 AllCops:
-  Include:
-    - metadata.rb
-    - Gemfile
-    - attributes/**
-    - libraries/**
-    - providers/**
-    - recipes/**
-    - resources/**
-    - spec/**
-
-Encoding:
   Exclude:
-    - metadata.rb
-
-NumericLiterals:
-  Enabled: false
+    - spec/example.txt
 
 LineLength:
   Enabled: false
-
-WordArray:
-  MinSize: 3
