--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,11 +7,15 @@ provisioner:
 
 platforms:
   - name: ubuntu-14.04
-  - name: centos-7.2
+    driver:
+      gui: false
+      provision: true
+      vagrantfiles:
+        - test/provision/vagrant_debian.rb
   - name: windows-2012r2
-    driver_config:
-      box:  mwrock/windows2012r2
-
+    driver:
+      gui: false
+      box:  mwrock/Windows2012R2
 
 suites:
   - name: default
