--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -21,6 +21,15 @@ suites:
   - name: default
     run_list:
       - recipe[atom]
+  - name: apm
+    run_list:
+      - recipe[atom::packages]
+    attributes:
+      atom:
+        packages:
+          - vim-mode
+    # having issues getting apm to run via test-kitchen on Windows
+    excludes: windows-2012r2
 
 verifier:
   name: inspec
