--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,13 +1,14 @@
 ---
 driver:
   name: vagrant
+  synced_folders:
+   - ["~", "/dir", "create: false"]
 
 provisioner:
   name: chef_zero
 
 platforms:
-  - name: ubuntu-14.04
-  - name: centos-7.2
+  - name: ubuntu-16.04
   - name: windows-2012r2
     driver_config:
       box:  mwrock/windows2012r2
@@ -17,6 +18,7 @@ suites:
   - name: default
     run_list:
       - recipe[atom]
+      - recipe[apm_packages]
 
 verifier:
   name: inspec
