Use a custom resource instead of an LWRP
Add integration tests.
Make the cookbook actions idempotent.
Clean up left over cruft from conversion
Cookstyle changes
Get it working on both debian and windows.
Tested on mac.
Use platform_family? instead of node.platform_family?
Update the rspec tests
Remove the chef spec tests
Include the fix for PR #30 to fix code owners
Remove chef spec remnants
Create the .atom/config.cson file to allow the apm test cases to work

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,29 @@
+---
+lint_and_unit: &lint_and_unit
+  - delivery
+  - danger
+  - lint-yaml
+
 version: 2.1
 
 orbs:
-  kitchen: sous-chefs/kitchen@1.0.0
+  kitchen: sous-chefs/kitchen@2
 
 workflows:
   kitchen:
     jobs:
+      # Lint and Unit Test
+      - kitchen/yamllint:
+          name: lint-yaml
       - kitchen/danger:
           name: danger
           context: Danger
-      - kitchen/lint:
-          name: lint
+      - kitchen/delivery:
+          name: delivery
+
+      # Resource tests
+      - kitchen/dokken-single:
+          name: default-ubuntu-1804
+          suite: default-ubuntu-1804
+          requires:
+            *lint_and_unit
