--- a/kitchen.yml
+++ b/kitchen.yml
@@ -1,3 +1,4 @@
+---
 driver:
   name: vagrant
 
@@ -14,21 +15,13 @@ platforms:
   - name: windows-2012r2
     driver:
       gui: false
-      box:  mwrock/Windows2012R2
+      box: mwrock/Windows2012R2
 
 suites:
   - name: default
     run_list:
       - recipe[atom]
-  - name: apm
-    run_list:
-      - recipe[atom::packages]
-    attributes:
-      atom:
-        packages:
-          - vim-mode
-    # having issues getting apm to run via test-kitchen on Windows
-    excludes: windows-2012r2
+      - recipe[apm_packages]
 
 verifier:
   name: inspec
