--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,23 @@
+# Use Travis's cointainer based infrastructure
 sudo: false
 addons:
   apt:
     sources:
-      - chef-current-precise
+      - chef-current-trusty
     packages:
       - chefdk
 
-# Don't `bundle install`
-install: echo 'skipping bundle install'
+# Don't `bundle install` which takes about 1.5 mins
+install: echo "skip bundle install"
+branches:
+  only:
+    - master
 
 # Ensure we make ChefDK's Ruby the default
 before_script:
   - eval "$(/opt/chefdk/bin/chef shell-init bash)"
 script:
   - /opt/chefdk/embedded/bin/chef --version
-  - /opt/chefdk/embedded/bin/rubocop --version
+  - /opt/chefdk/embedded/bin/cookstyle --version
   - /opt/chefdk/embedded/bin/foodcritic --version
-  # print out ChefSpec version
-  - /opt/chefdk/embedded/bin/chef gem list chefspec
-  # run rake in the context of ChefDK
-  - chef exec rake
-matrix:
-  fast_finish: true
+  - /opt/chefdk/bin/chef exec delivery local all
