--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,9 @@
+---
+
 version: 2.1
 
 orbs:
-  kitchen: sous-chefs/kitchen@1.0.0
+  kitchen: sous-chefs/kitchen@2
 
 workflows:
   kitchen:
@@ -11,3 +13,6 @@ workflows:
           context: Danger
       - kitchen/lint:
           name: lint
+      - kitchen/dokken-single:
+          name:  default-ubuntu-1804
+          suite: default-ubuntu-1804
