--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,27 +3,23 @@ lint_and_unit: &lint_and_unit
   - delivery
   - danger
   - lint-yaml
-
+  - lint-markdown
 version: 2.1
-
 orbs:
   kitchen: sous-chefs/kitchen@2
-
 workflows:
   kitchen:
     jobs:
-      # Lint and Unit Test
       - kitchen/yamllint:
           name: lint-yaml
+      - kitchen/mdlint:
+          name: lint-markdown
       - kitchen/danger:
           name: danger
           context: Danger
       - kitchen/delivery:
           name: delivery
-
-      # Resource tests
       - kitchen/dokken-single:
           name: default-ubuntu-1804
           suite: default-ubuntu-1804
-          requires:
-            *lint_and_unit
+          requires: *lint_and_unit
