Adds final step to circleci builds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,12 @@
 ---
+jobs:
+  final:
+    docker:
+      - image: bash:latest
+    steps:
+      - run:
+          name: Finish cooking
+          command: echo "Finished cooking"
 lint_and_unit: &lint_and_unit
   - delivery
   - danger
@@ -23,3 +31,6 @@ workflows:
           name: default-ubuntu-1804
           suite: default-ubuntu-1804
           requires: *lint_and_unit
+      - final:
+          requires:
+            - default-ubuntu-1804
