--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,20 +40,20 @@ jobs:
     strategy:
       matrix:
         os:
-          - 'ubuntu-1804'
-          - 'ubuntu-2004'
-          - 'ubuntu-2104'
+          - "ubuntu-1804"
+          - "ubuntu-2004"
+          - "ubuntu-2104"
         suite:
-          - 'default'
+          - "default"
       fail-fast: false
 
     steps:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Install Chef
-        uses: actionshub/chef-install@main
+        uses: actionshub/chef-install@2.0.4
       - name: Dokken
-        uses: actionshub/test-kitchen@main
+        uses: actionshub/test-kitchen@2.1.0
         env:
           CHEF_LICENSE: accept-no-persist
           KITCHEN_LOCAL_YAML: kitchen.dokken.yml
